@@ -59,14 +59,14 @@
     <div class="field">
       <%= f.label :risk_factors %><br />
       <table class="blank padded" style="width:100%;table-layout:fixed">
-      <% Choice.where(category: 'risk factors').in_groups_of(5).each do |row_risk_factors| %>
-        <tr>
-          <% row_risk_factors.each do |choice| %>
-            <td><% if choice %><%= check_box_tag "prescreen[risk_factor_ids][]", choice.id, @prescreen.risk_factors.include?(choice) %> <%= @choice = choice; render partial: 'choices/show' %><% end %></td>
-          <% end %>
-        </tr>
-      <% end %>
-    </table>
+        <% Choice.where(category: 'risk factors').in_groups_of(5).each do |row_risk_factors| %>
+          <tr>
+            <% row_risk_factors.each do |choice| %>
+              <td><% if choice %><%= check_box_tag "prescreen[risk_factor_ids][]", choice.id, @prescreen.risk_factors.include?(choice) %> <%= @choice = choice; render partial: 'choices/show' %><% end %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </table>
     </div>
   </fieldset>
 
