@@ -4,6 +4,7 @@
   * Subject Handler Role Added:
     * Can View, Create, Update, and Delete: Prescreens, Mailings, Calls, Evaluations, and Visits for Patients with Subject Codes
   * Patients list cleaned up
+  * Mailings now include Risk Factors
 
 == 0.2.1
 
